examples/pos/imports/resources.effekt
module examples/pos/imports/resources

extern interface R
extern resource r: R

def main() = ()