examples/neg/cyclic_a.effekt
module cyclic_a

import examples/neg/cyclic_b

def main() = ()
